k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-app-service
spec:
  type: NodePort
  selector:
    app: banking-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
